# PaceUp

./: .gitignore  README.md  docker-compose.cloudflare.yaml  docker-compose.yaml
.github/workflows/: README.md  deploy.yml
app/: main.py
app/api/v1/: strava.py
app/db/: schema.py
app/models/: strava.py
app/services/: strava_db_service.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  analysis.py  auth.py  cache.py  strava.py  training.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: schema.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  analysis.py  auth.py  training.py
backend/app/services/: __init__.py  ai_analysis_service.py  redis_service.py  strava_db_service.py  strava_service.py  training_plan_service.py
backend/migrations/: 000_add_training_plans.sql  001_add_training_plan_activities.sql  add_athlete_stats.sql
backend/scripts/: create_user.py
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx  siteConfig.ts
frontend/src/app/activities/: page.tsx
frontend/src/components/: ActivityPaceHeartRateChart.tsx  ComboChart.tsx  CustomTooltips.tsx  LapHeartRateChart.tsx  LapPaceChart.tsx  ProgressCharts.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
nginx/: nginx.conf  nginx.dev.conf  nginx.ini.conf  nginx.initial.conf
scripts/: apply-migrations.sh  deploy-backend.sh  init-letsencrypt.sh  setup-ssl.sh
(+9 files in other folders)
